logs/gomill.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/gomill'...
Compiling './lib/python3.5/site-packages/gomill/allplayalls.py'...
***   File "./lib/python3.5/site-packages/gomill/allplayalls.py", line 100
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gomill/cem_tuners.py'...
***   File "./lib/python3.5/site-packages/gomill/cem_tuners.py", line 194
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gomill/competitions.py'...
***   File "./lib/python3.5/site-packages/gomill/competitions.py", line 199
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gomill/game_jobs.py'...
***   File "./lib/python3.5/site-packages/gomill/game_jobs.py", line 236
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gomill/gtp_controller.py'...
***   File "./lib/python3.5/site-packages/gomill/gtp_controller.py", line 408
    except EnvironmentError, e:
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gomill/gtp_engine.py'...
***   File "./lib/python3.5/site-packages/gomill/gtp_engine.py", line 72
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gomill/gtp_games.py'...
***   File "./lib/python3.5/site-packages/gomill/gtp_games.py", line 216
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gomill/gtp_proxy.py'...
***   File "./lib/python3.5/site-packages/gomill/gtp_proxy.py", line 106
    except (GtpChannelError, BadGtpResponse), e:
                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gomill/gtp_states.py'...
***   File "./lib/python3.5/site-packages/gomill/gtp_states.py", line 476
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gomill/job_manager.py'...
***   File "./lib/python3.5/site-packages/gomill/job_manager.py", line 47
    except JobFailed, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gomill/mcts_tuners.py'...
***   File "./lib/python3.5/site-packages/gomill/mcts_tuners.py", line 266
    def most_visits((child_index, node)):
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gomill/playoffs.py'...
***   File "./lib/python3.5/site-packages/gomill/playoffs.py", line 65
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gomill/ringmaster_command_line.py'...
***   File "./lib/python3.5/site-packages/gomill/ringmaster_command_line.py", line 17
    print "running startup checks on all players"
                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/gomill/ringmaster_presenters.py'...
***   File "./lib/python3.5/site-packages/gomill/ringmaster_presenters.py", line 140
    print s
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/gomill/ringmasters.py'...
***   File "./lib/python3.5/site-packages/gomill/ringmasters.py", line 46
    exec code in result
            ^
SyntaxError: Missing parentheses in call to 'exec'

Compiling './lib/python3.5/site-packages/gomill/settings.py'...
***   File "./lib/python3.5/site-packages/gomill/settings.py", line 146
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gomill/sgf_grammar.py'...
***   File "./lib/python3.5/site-packages/gomill/sgf_grammar.py", line 246
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gomill/tournaments.py'...
***   File "./lib/python3.5/site-packages/gomill/tournaments.py", line 120
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gomill/utils.py'...
***   File "./lib/python3.5/site-packages/gomill/utils.py", line 74
    except EnvironmentError, e:
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gomill-0.8.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
